--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,14 @@
 [package]
 name = "lab-os"
 version = "0.1.0"
-edition = "2021"
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+edition = "2024"
 
 [build-dependencies]
-bootloader = "0.11"
+bootloader = { version = "0.11", default-features = false, features = ["uefi"] }
 kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none"}
 
 [dependencies]
-ovmf-prebuilt = "0.1.0-alpha.1"
+ovmf-prebuilt = "0.2.1"
 
 [workspace]
 members = [ "kernel" ]
