--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "kernel"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 bootloader_api = "0.11"
-uart_16550 = "0.3.0"
-noto-sans-mono-bitmap = "0.2.0"
+x86_64 = { version = "0.15.2", default-features = false, features = ["instructions"]}
+uart_16550 = "0.3"
+noto-sans-mono-bitmap = "0.3"
